# jupyter-ollama-ai

./: .eslintignore  .eslintrc.js  .gitignore  .pnp.cjs  CHANGELOG.md  DATA_SCIENCE_IMPROVEMENTS.md  MANIFEST.in  PERFORMANCE_IMPROVEMENTS.md  PYPI_UPLOAD_GUIDE.md  README.md  clean_rebuild.sh  future_plans.md  install.json  jest.config.js  package.json  plans_v1.1.2.md  project.readme.md  project_requirements.md  pyproject.toml  safe_reinstall_jupyterlab.sh  setup.py  update_version.sh  v1.1.1_problems.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  publish.yml
docs/: README.md
docs/api-reference/: README.md  ollama-api.md
docs/developer-guide/: README.md  architecture.md  building-testing.md  error-handling.md  performance-optimizations.md  project-structure.md
docs/tutorials/: README.md  code-improvement-tutorial.md
docs/user-guide/: README.md  enhanced-user-experience.md  getting-started.md  installation.md
jupyterNotebooks/: Untitled.ipynb
jupyterlab-ai-assistant/: MANIFEST.in  README.md  Untitled.ipynb  build-check.sh  build-dist-debug.sh  build-dist.sh  container-test.py  install-fixed.sh  install.sh  package-lock.json  package.json  repo-test.sh  setup.py  tsconfig.json
jupyterlab-ai-assistant/jupyterlab_ai_assistant/: __init__.py  _version.py  cell_context.py  config.py  handlers.py  ollama_client.py
jupyterlab-ai-assistant/schema/: plugin.json
jupyterlab-ai-assistant/src/: index.ts  plugin.ts
jupyterlab-ai-assistant/src/components/: CellContextMenu.tsx  CellToolbarButton.tsx  ChatMessage.tsx  ChatWidget.tsx
jupyterlab-ai-assistant/src/services/: cell.ts  ollama.ts
jupyterlab-ai-assistant/style/: ChatWidget.css  cell-analysis.css  index.css
ollama_jupyter_ai/: __init__.py
ollama_jupyter_ai/labextension/: package.json  tsconfig.json
ollama_jupyter_ai/labextension/src/: index.ts  install.json  notebook-extension.ts  widget.tsx
ollama_jupyter_ai/labextension/src/components/: AIAssistantPanel.tsx  CodePreview.tsx  Icons.tsx  InputArea.tsx  MessageList.tsx  ModelSelector.tsx  SetupWizard.tsx  TabNavigation.tsx
ollama_jupyter_ai/labextension/src/context/: AIAssistantContext.tsx
ollama_jupyter_ai/labextension/src/hooks/: useNotebookContent.ts  useOllamaApi.ts
ollama_jupyter_ai/labextension/src/services/: NotebookService.ts  OllamaHealthService.ts  OllamaService.ts
ollama_jupyter_ai/labextension/src/types/: lucide-react.d.ts
ollama_jupyter_ai/labextension/src/utils/: formatUtils.tsx  performanceUtils.ts
ollama_jupyter_ai/labextension/style/: base.css  index.css
pypi/: README.md  upload_to_pypi.py  upload_to_pypi.sh  upload_to_testpypi.py  upload_to_testpypi.sh
tests/: README.md  global.d.ts  setup.js
tests/components/: CodePreview.test.tsx  SetupWizard.test.tsx
tests/integration/: ApiInteraction.test.ts
tests/mocks/: fileMock.js
tests/services/: OllamaHealthService.test.ts
tests/utils/: performanceUtils.test.ts
