[build-system]
requires = ["jupyter_packaging~=0.12.0", "jupyterlab~=4.0"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["ollama_jupyter_ai/labextension/static/style.js"]
ensured-targets = ["ollama_jupyter_ai/labextension/static/style.js"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["ollama_jupyter_ai/labextension/**", "yarn.lock", ".*", "package-lock.json"] 